--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     place-content: center flex-start;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background: -webkit-linear-gradient(left, #000000, #000000);
     flex-flow: column nowrap;
     gap: 10px;
     height: 100vh;
@@ -172,7 +172,7 @@ textarea {
 .generate-button {
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgb(255, 79, 18);
+    background: -webkit-radial-gradient(circle, #fd5400, #fd5400);
     border-radius: 100px;
     display: flex;
     flex: 0 0 auto;
@@ -186,6 +186,9 @@ textarea {
     width: min-content;
     will-change: transform;
     cursor: pointer;
+    
+  background-size: 200% 200%;
+  animation: gradient-animation 4s ease infinite;
 }
 
 .generate {
